# AI__Chatbot

./: README.md  pyproject.toml
core/: settings.py  urls.py
home/: views.py
static/css/: style.css
templates/: index.html
